[JBWS-4027][JBWS-4081] More changes to support GA version of JDK9 + upgrade to JAXB 2.3