@@ -77,16 +77,16 @@
     <cxf.version>3.2.0</cxf.version>
     <cxf.asm.version>5.2</cxf.asm.version>
     <cxf.xjcplugins.version>3.1.0</cxf.xjcplugins.version>
-    <jboss-logging.version>3.2.1.Final</jboss-logging.version>
-    <jboss-logging-annotations.version>1.2.0.Final</jboss-logging-annotations.version>
-    <jboss-logging-processor.version>1.2.0.Final</jboss-logging-processor.version>
+    <jboss-logging.version>3.3.1.Final</jboss-logging.version>
+    <jboss-logging-annotations.version>2.1.0.Final</jboss-logging-annotations.version>
+    <jboss-logging-processor.version>2.1.0.Final</jboss-logging-processor.version>
     <jboss.xb.version>2.0.3.GA</jboss.xb.version>
     <picketbox.version>4.0.19.Final</picketbox.version>
     <picketlink.version>2.5.2.Final</picketlink.version>
     <jaxws-undertow-httpspi.version>1.0.1.Final</jaxws-undertow-httpspi.version>
     <io.undertow.version>1.0.10.Final</io.undertow.version>
-    <jaxb.api.version>1.0.4.Final</jaxb.api.version>
-    <jaxb.impl.version>2.2.11.jbossorg-1</jaxb.impl.version>
+    <jaxb.api.version>1.0.0.Alpha1</jaxb.api.version>
+    <jaxb.impl.version>2.3.0</jaxb.impl.version>
     <jaxws.api.version>2.0.4.Final</jaxws.api.version>
     <jsr181.api.version>1.0-MR1</jsr181.api.version>
     <commons-beanutils.version>1.9.2</commons-beanutils.version>
@@ -99,6 +99,7 @@
     <fastinfoset.version>1.2.12</fastinfoset.version>
     <neethi.version>3.0.3</neethi.version>
     <opensaml.version>3.2.0</opensaml.version>
+    <annotation.api.version>1.0.0.Final</annotation.api.version>
     <saaj.api.version>1.0.4.Final</saaj.api.version>
     <servlet.api.version>1.0.0.Final</servlet.api.version>
     <stax.api.version>1.0-2</stax.api.version>
@@ -106,7 +107,6 @@
     <velocity.version>2.0</velocity.version>
     <xerces.version>2.9.1</xerces.version>
     <xmlsec.version>2.1.0</xmlsec.version>
-    <xsom.version>20140925</xsom.version>
     <wss4j.version>2.2.0</wss4j.version>
     <wstx.version>5.0.3</wstx.version>
     <shrinkwrap.version>1.1.3</shrinkwrap.version>
@@ -1104,6 +1104,11 @@
         <version>${jsr181.api.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.jboss.spec.javax.annotation</groupId>
+        <artifactId>jboss-annotations-api_1.2_spec</artifactId>
+        <version>${annotation.api.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.jboss.spec.javax.servlet</groupId>
         <artifactId>jboss-servlet-api_3.1_spec</artifactId>
         <version>${servlet.api.version}</version>
@@ -1167,7 +1172,7 @@
       </dependency>
       <dependency>
         <groupId>org.jboss.spec.javax.xml.bind</groupId>
-        <artifactId>jboss-jaxb-api_2.2_spec</artifactId>
+        <artifactId>jboss-jaxb-api_2.3_spec</artifactId>
         <version>${jaxb.api.version}</version>
       </dependency>
       <dependency>
@@ -1189,11 +1194,6 @@
         <groupId>org.glassfish.jaxb</groupId>
         <artifactId>codemodel</artifactId>
         <version>${jaxb.impl.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.sun.xsom</groupId>
-        <artifactId>xsom</artifactId>
-        <version>${xsom.version}</version>
       </dependency>
       <dependency>
         <groupId>com.sun.xml.bind.external</groupId>
@@ -1492,7 +1492,7 @@
       </activation>
       <properties>
         <modular.jdk.args>
-          --add-modules java.se.ee
+          --add-modules=java.se
         </modular.jdk.args>
         <modular.jdk.props>
           -Dsun.util.logging.disableCallerCheck=true
@@ -1506,21 +1506,6 @@
           --add-exports=java.xml/com.sun.org.apache.xpath.internal.jaxp=ALL-UNNAMED
           --add-exports=java.xml/com.sun.xml.internal.stream=ALL-UNNAMED
           --add-exports=java.xml/javax.xml.namespace=ALL-UNNAMED
-          --add-exports=jdk.security.jgss/com.sun.security.sasl.gsskerb=ALL-UNNAMED
-          --add-opens=java.base/java.lang=ALL-UNNAMED
-          --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-          --add-opens=java.base/java.security=ALL-UNNAMED
-          --add-opens=java.base/java.io=ALL-UNNAMED
-          --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-          --add-opens=java.base/java.math=ALL-UNNAMED
-          --add-opens=java.base/java.net=ALL-UNNAMED
-          --add-opens=java.base/java.nio=ALL-UNNAMED
-          --add-opens=java.base/java.util=ALL-UNNAMED
-          --add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED
-          --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-          --add-opens=java.management/javax.management=ALL-UNNAMED
-          --add-opens=java.management/javax.management.openmbean=ALL-UNNAMED
-          --add-opens=java.xml/javax.xml.namespace=ALL-UNNAMED
         </modular.jdk.props>
         <!--modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Dsun.reflect.debugModuleAccessChecks=true -Djaxb.debug=true</modular.jdk.props-->
       </properties>
